# ray_tracing

./: CMakeLists.txt  README.md  geom.h  main.cpp
